Added Next JS application

--- a/ai-ops-workshop/ecs/frontend/.env.production
+++ b/ai-ops-workshop/ecs/frontend/.env.production
@@ -1,1 +1,3 @@
 REACT_APP_BACKEND_URL=http://ai-ops-alb-1019992774.us-west-2.elb.amazonaws.com:8080
+# REACT_APP_REPORT_URL=http://localhost:3002
+REACT_APP_REPORT_URL=http://ai-ops-alb-1019992774.us-west-2.elb.amazonaws.com:3002
