updated local databse string

--- a/ai-ops-workshop/ecs/backend-dotnet/appsettings.json
+++ b/ai-ops-workshop/ecs/backend-dotnet/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=tmsdb;Username=tmsadmin;Password=TmsAdmin123!"
+    "DefaultConnection": "Host=tms-postgres-db.cze6gimmssrl.us-west-2.rds.amazonaws.com;Database=tmsdb;Username=tmsadmin;Password=TmsAdmin123!;SSL Mode=Disable",
+    "LocalConnection": "Host=localhost;Database=tmsdb;Username=tmsadmin;Password=TmsAdmin123!"
   },
-  "FrontendUrl": "http://localhost:3000"
+  "FrontendUrl": "http://ai-ops-alb-1019992774.us-west-2.elb.amazonaws.com"
 }
